# inventory_tauri

./: .gitignore  .prettierignore  BACKEND_COMPLETE.md  BUILD_GUIDE.md  DATABASE_MIGRATION_NOTE.md  FINAL_FIX.md  HOW_TO_FIX_CHECKOUT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  MIGRATION_FIX.md  PHASE_TRACKING.md  PROGRESS_SUMMARY.md  QUICK_MIGRATION_GUIDE.md  QUICK_START.md  README.md  README_RESTART.txt  RESTART_INSTRUCTIONS.md  TEST_PLAN.md  USER_GUIDE.md  eslint.config.mjs  generate_fake_data.py  generate_fake_data_v2.py  lint_output.txt  next.config.mjs  package-lock.json  package.json  schema.prisma  tailwind.config.js  tsconfig.json
DB_AI/: __init__.py  add_training_data.py  build.sh  build_spec.py  config.py  db-ai-server-aarch64-apple-darwin.spec  ingest_training_data_via_api.py  main.py  requirements.txt  verify_paths.py
app/: globals.css  layout.tsx  manifest.json  page.tsx  template.tsx
components/: DataPrefetcher.tsx  providers.tsx
lib/: env.ts  (+11 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai_chat.rs  analytics.rs  auth.rs  biometric.rs  customer_payments.rs  customers.rs  data_management.rs  deleted_items.rs  google_drive.rs  images.rs  invoices.rs  migration.rs  mod.rs  products.rs  purchase_orders.rs  search.rs  settings.rs  share.rs  suppliers.rs
src-tauri/src/db/: archive.rs  connection.rs  migration_purchase_orders.sql  mod.rs  models.rs  schema.rs
src-tauri/src/services/: inventory_service.rs  mod.rs
(+134 files in other folders)
