[package]
name = "inventory-system"
version = "1.0.0"
description = "Inventory Management System Desktop Application"
authors = ["Zubair"]
license = "MIT"
repository = "https://github.com/zubair78600/inventory_tauri"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"

# Database dependencies
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
tauri-plugin-dialog = "2.4.2"
